--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.18",
     "expo-web-browser": "~14.2.0",
+    "lodash.debounce": "^4.0.8",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
@@ -46,14 +47,13 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "supercluster": "^7.1.5",
-    "lodash.debounce": "^4.0.8"
+    "supercluster": "^7.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "typescript": "~5.8.3"
+    "typescript": "^5.8.3"
   }
 }
